[package]
name = "fp-vis-wasm"
version = "0.1.0"
authors = ["Asger Hautop Drewsen <asger@tyilo.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
num-rational = "0.4.1"
num-bigint = "0.4.4"
thiserror = "2.0.17"
num-traits = "0.2.17"
serde-wasm-bindgen = "0.6.0"
serde = { version = "1.0.189", features = ["derive"] }
bitvec = "1.0.1"
funty = "2.0.0"
duplicate = "2.0.0"
num-integer = "0.1.45"
bstr = "1.9.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
